--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,13 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.2",
     "@mui/x-data-grid": "^5.15.0",
+    "@syncfusion/ej2-react-grids": "^20.2.43",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "express": "^4.18.1",
+    "firebase": "^9.9.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-circular-progressbar": "^2.1.0",
@@ -33,7 +35,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    
   },
   "eslintConfig": {
     "extends": [
@@ -57,6 +58,5 @@
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.7"
-  }, 
-  "proxy":"http://localhost:5000/"
+  }
 }
