--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://madihamamdouh.githib.io/E-commerce-dashboard/",
   "name": "gitt-app",
   "version": "0.1.0",
   "private": true,
@@ -17,6 +18,7 @@
     "axios": "^0.27.2",
     "express": "^4.18.1",
     "firebase": "^9.9.3",
+    "gh": "^2.8.9",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-circular-progressbar": "^2.1.0",
@@ -36,6 +38,8 @@
     "timeago.js": "^4.0.2"
   },
   "scripts": {
+    "predepoly": "bpm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
