--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.1",
     "firebase": "^9.9.3",
     "gh": "^2.8.9",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-circular-progressbar": "^2.1.0",
@@ -38,7 +39,7 @@
     "timeago.js": "^4.0.2"
   },
   "scripts": {
-    "predepoly": "bpm run build",
+    "predepoly": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
